# sentence_embedding

./: .gitignore  Animal_fstx_300d_indexed_local.missing  Annotation_fstx_300d_indexed_local.missing  Antenna_fstx_300d_indexed_local.missing  Application_fstx_300d_indexed_local.missing  Bicycle_fstx_300d_indexed_local.missing  Bicycle_fstx_indexed_local.missing  Boundary_fstx_300d_indexed_local.missing  Change_fstx_300d_indexed_local.missing  Contact_fstx_300d_indexed_local.missing  Context_fstx_300d_indexed_local.missing  Corpus_fstx_300d_indexed_local.missing  Dep2Vec_300d  Disaster_fstx_300d_indexed_local.missing  Disease_fstx_300d_indexed_local.missing  Event_fstx_300d_indexed_local.missing  FastText_100d  FastText_200d  FastText_300d  FastText_350d  FastText_400d  FastText_450d  FastText_500bin  FastText_500d  FastText_50d  Ferver_fstx_300d_indexed_local.missing  Font_fstx_300d_indexed_local.missing  Frame_fstx_300d_indexed_local.missing  Galaxy_fstx_300d_indexed_local.missing  Glove_200d  Glove_300d  Goal_fstx_300d_indexed_local.missing  Goitre_fstx_300d_indexed_local.missing  Home_fstx_300d_indexed_local.missing  Idea_fstx_300d_indexed_local.missing  Identify_fstx_300d_indexed_local.missing  Image_fstx_300d_indexed_local.missing  Mechanism_fstx_300d_indexed_local.missing  Mineral_fstx_300d_indexed_local.missing  Outcome_fstx_300d_indexed_local.missing  (+101 more)
.githooks/: pre-commit
angles/: FNWN_angles_FastText_300d.csv  OnWN_angles_FastText_300d.csv  angles.py  onwn_angles_FastText_300d.ods  onwn_angles_W2V_300d.ods  sick_angles_FastText_300d.csv  sick_angles_FastText_300d.ods  sick_angles_W2V_300d.csv  sick_angles_W2V_300d.ods
deprecated/: .classify_lsa_winds.py.swp  classify_lsa_winds.py  cross-entropy_weights.py  document_classification.py  entropy_weights.py
docker/: Dockerfile  README.md  entrypoint.sh  train_and_demo.py
links/: fstx-1000d  (+14 more)
(+10750 files in other folders)
